src/objects/Parent1__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child2</label>
        <referenceTo>Child2__c</referenceTo>
        <relationshipLabel>Parent1</relationshipLabel>
        <relationshipName>Parent1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Emp_Address__c</fullName>
        <label>Emp Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emp_ID__c</fullName>
        <label>Emp ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Name__c</fullName>
        <label>Emp Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child1</label>
        <referenceTo>Child1__c</referenceTo>
        <relationshipLabel>Parent1</relationshipLabel>
        <relationshipName>Parent1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Parent1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Parent1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>